Minor fix in baseline

--- a/baseline_model.ipynb
+++ b/baseline_model.ipynb
@@ -533,7 +533,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Model\n",
     "# model = torchvision.models.resnet50(weights=\"ResNet50_Weights.DEFAULT\")\n",
     "model = torchvision.models.densenet169(weights=\"DenseNet169_Weights.DEFAULT\")\n",
     "model.classifier = torch.nn.Linear(model.classifier.in_features, 1)\n",
@@ -543,9 +542,7 @@
     "optimizer = torch.optim.Adam(model.parameters(), betas=(0.9, 0.999), lr=0.0001)\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "# loss_fn = torch.nn.BCELoss()\n",
+    "loss_fn = torch.nn.BCELoss()\n",
     "\n",
     "train_losses, val_losses, train_acc, val_acc = train_model(\n",
     "    model, train_loader, val_loader, loss_fn, optimizer, n_epochs=5\n",
